--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
-name: Utils
-version: @version@
+name: MCUtils
+version: 1.2
 main: com.itiscaleb.utils.Utils
-api-version: 1.16
+api-version: 1.18
 authors: [ ItisCaleb ]
+description: SMP plugin
 commands:
   utilrule:
     description: Some useful utils
